[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Projectiles/Projectile/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Entities/Projectiles/Projectile/ProjectileArea.gd" type="Script" id=2]
[ext_resource path="res://Entities/Projectiles/Projectile/big-dust.png" type="Texture" id=3]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.246862, 1 ), 0.0, -0.0143941, 0, 0, Vector2( 0.761506, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
lifetime_randomness = 0.32
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.15
angular_velocity = 4.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 0.3
damping = 300.0
angle = 113.4
angle_random = 0.53
scale_random = 0.99
scale_curve = SubResource( 4 )

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ProjectileArea" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="ProjectileArea"]

[node name="Tween" type="Tween" parent="."]

[node name="ExplostionParticles" type="Particles2D" parent="."]
emitting = false
amount = 11
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.11
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="CenterPosition" type="Position2D" parent="."]
[connection signal="body_entered" from="ProjectileArea" to="ProjectileArea" method="_on_ProjectileArea_body_entered"]
[connection signal="collided_with_player" from="ProjectileArea" to="." method="_on_ProjectileArea_collided_with_player"]
[connection signal="exited_game_area" from="ProjectileArea" to="." method="_on_ProjectileArea_exited_game_area"]
